--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@splidejs/svelte-splide": "^0.2.9"
+		"@popperjs/core": "^2.11.8",
+		"@splidejs/svelte-splide": "^0.2.9",
+		"flowbite": "^2.2.1",
+		"flowbite-svelte": "^0.44.22",
+		"tailwind-merge": "^2.2.1"
 	}
 }
