--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@splidejs/svelte-splide": "^0.2.9"
+		"@splidejs/svelte-splide": "^0.2.9",
+		"flowbite-svelte": "^0.44.22"
 	}
 }
